--- a/RealEstateAgency/Areas/Admin/Views/Estates/Details.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Estates/Details.cshtml
@@ -1,145 +1,137 @@
-﻿@model RealEstateAgency.Core.Entities.Estate
+﻿@model RealEstateAgency.Core.Models.EstateDetailsViewModel
 
 @{
     ViewData["Title"] = "Details";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>Estate</h4>
+    <h4>Details</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.EstateName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.EstateName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Address)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Address)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Tags)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Tags)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Rooms)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Rooms)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.BathRooms)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.BathRooms)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Balconies)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Balconies)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ParkingSpaces)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ParkingSpaces)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TotalArea)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TotalArea)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.LivingArea)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.LivingArea)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.KitchenArea)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.KitchenArea)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Currency)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Currency)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CreatedDate)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CategoryName)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.CategoryName)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CategoryName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AgentUser)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.AgentUserName)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AgentUser.FirstName)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.AgentUserName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BuildingPlan)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BuildingPlanName)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BuildingPlan.BuildingPlanName)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.BuildingPlanName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BuildingType)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BuildingTypeName)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BuildingType.BuildingTypeName)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.BuildingTypeName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Zone)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ZoneName)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Zone.ZoneName)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ZoneName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Map)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.EstateConditionName)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Map.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EstateCondition)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EstateCondition.EstateConditionName)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.EstateConditionName)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="row col-md-4 p-1">
+        <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary col m-1">Edit</a>
+        <a class="btn btn-primary col m-1" role="button" asp-action="Index">Back to List</a>
+    </div>
 </div>
