added feature to asign parent zone when creating a new zone

--- a/RealEstateAgency/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link href="~/css/jquery-ui.css" rel="stylesheet" type="text/css" />
     <link href="~/jtable/themes/metro/blue/jtable.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="~/lib/fancy-file-uploader/fancy_fileupload.css">
+
 </head>
 
 <body>
