--- a/RealEstateAgency/Areas/Admin/Views/Estates/Delete.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Estates/Delete.cshtml
@@ -130,6 +130,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.EstateConditionName)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.EstateOptions)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.EstateOptions)
+        </dd>
     </dl>
 
     <form asp-action="Delete" class="row col-md-4 p-2">
