--- a/RealEstateAgency/Areas/Admin/Views/Estates/Edit.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Estates/Edit.cshtml
@@ -116,6 +116,15 @@
                 <select asp-for="EstateConditionId" class="form-select" asp-items="ViewBag.EstateConditionId"></select>
                 <span asp-validation-for="EstateConditionId" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                @for (int i = 0; i < Model.EstateOptionViewModels.Count(); i++)
+                {
+                    <input type="hidden" asp-for="@Model.EstateOptionViewModels[i].Id" />
+                    <input type="hidden" asp-for="@Model.EstateOptionViewModels[i].EstateOptionName" />
+                    <input type="checkbox" asp-for="@Model.EstateOptionViewModels[i].IsSet" />
+                    <label asp-for="@Model.EstateOptionViewModels[i].IsSet">@Model.EstateOptionViewModels[i].EstateOptionName</label>
+                }
+            </div>
             <div class="form-group row p-2">
                 <input type="submit" value="Save" class="btn btn-primary col m-1" />
                 <a class="btn btn-primary col m-1" role="button" asp-action="Index">Back to List</a>
