--- a/RealEstateAgency/wwwroot/css/site.css
+++ b/RealEstateAgency/wwwroot/css/site.css
@@ -103,4 +103,188 @@ body {
     overflow: hidden;
 }
 
-.btn-
+.card {
+    width: 100%;
+    height: auto;
+    padding: 15px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    overflow: hidden;
+    background: #fafbff;
+}
+
+.card .top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.card p {
+    font-size: 0.9rem;
+    font-weight: 600;
+    color: #878a9a;
+}
+
+.card button {
+    outline: 0;
+    border: 0;
+    background: #5256ad;
+    color: #fff;
+    border-radius: 4px;
+    transition: 0.3s;
+    cursor: pointer;
+    font-weight: 400;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+    font-size: 0.8rem;
+    padding: 8px 13px;
+}
+
+.card button:hover {
+    opacity: 0.8;
+}
+
+.card button:active {
+    transform: translateY(5px);
+}
+
+.card .drag-area {
+    width: 100%;
+    height: 160px;
+    border-radius: 5px;
+    border: 2px dashed #d5d5e1;
+    color: #c8c9dd;
+    font-size: 0.9rem;
+    font-weight: 500;
+    position: relative;
+    background: #dfe3f259;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    -webkit-user-select: none;
+    margin-top: 10px;
+}
+
+.card .drag-area .visible {
+    font-size: 18px;
+}
+
+.card .select {
+    color: #5256ad;
+    margin-left: 5px;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.card .select:hover {
+    opacity: 0.6;
+}
+
+.card .image_container {
+    width: 100%;
+    height: auto;
+    display: inline;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    max-height: 200px;
+    overflow-y: auto;
+    margin-top: 10px;
+}
+
+.card .image_container .image {
+    width: calc(16% - 19px);
+    margin-right: 15px;
+    height: 150px;
+    position: relative;
+    margin-bottom: 8px;
+    display: inline-block;
+}
+
+.card .image_container .image img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+/*.card .image_container .image span {
+    width: 25px;
+    line-height: 18px;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 18px;
+    border: 3px solid #d5d5e100;
+    color: #d5d5e1;
+    background: #5256ad;
+    position: absolute;
+    transition: 0.4s;
+    padding-bottom: 2px;
+}
+
+.card .image_container .image span:hover {
+    border: 3px solid #d5d5e1;
+}*/
+.card .image_container .image span {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    background-color: #C9353B;
+    display: inline-block;
+    border: 3px solid #f4d6d7;
+    font-size: 3em;
+    border-radius: 50%;
+    transition: all .3s ease-in;
+    transform: rotate(45deg);
+}
+
+.card .image_container .image span:before {
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: #f4d6d7;
+    width: 80%;
+    height: 6%;
+    left: 10%;
+    top: 47%;
+}
+
+.card .image_container .image span:after {
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: #f4d6d7;
+    width: 6%;
+    height: 80%;
+    left: 47%;
+    top: 10%;
+}
+
+.card .image_container .image span:hover {
+    background-color: #f4d6d7;
+    transform: rotate(135deg);
+}
+
+.card .image_container .image span:hover:after,
+.card .image_container .image span:hover:before {
+    background-color: #C9353B;
+}
+
+
+.card .drag-area.dragover {
+    background: rgba(0, 0, 0, 0.4);
+}
+
+.card .drag-area.dragover .on-drop {
+    display: inline;
+    font-size: 28px;
+}
+
+.card input,
+.card .drag-area .on-drop,
+.card .drag-area.dragover .visible {
+    display: none;
+}
