--- a/RealEstateAgency/Areas/Admin/Views/Estates/Edit.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Estates/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <h4>Edit Estate</h4>
 <hr />
-<form asp-action="Edit">
+<form asp-action="Edit" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id" />
     <div class="row">
@@ -131,6 +131,32 @@
             </div>
         </div>
     </div>
+    <div class="card">
+        <div class="top">
+            <p>Photos</p>
+        </div>
+        <div class="drag-area">
+            <span class="visible">
+                Drag & drop image here or
+                <span class="select" role="button">Browse</span>
+            </span>
+            <span class="on-drop">Drop images here</span>
+            <input name="file" type="file" class="file" multiple />
+        </div>
+        <div class="mt-2">
+            <div class="image_container" id="existingImages">
+                @for (var i = 0; i < Model.Photos.Count(); i++)
+                {
+                    <div class="image" draggable="true">
+                        <span onclick="delExistingImage()"></span>
+                        <img draggable="false" src="@Model.Photos[i]" />
+                        <input type="hidden" asp-for="@Model.PhotoNames" value="@Model.PhotoNames[i]">
+                    </div>
+                }
+            </div>
+            <div id="image_container" class="image_container"></div>
+        </div>
+    </div>
 </form>
 
 <div id="estate_map" class="estate-map">
@@ -142,4 +168,5 @@
     }
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
     <script src="~/js/mapscript.js" asp-append-version="true"></script>
+    <script src="~/js/dragarea.js" asp-append-version="true"></script>
 }
