--- a/RealEstateAgency/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link href="~/css/jquery-ui.css" rel="stylesheet" type="text/css" />
     <link href="~/jtable/themes/metro/blue/jtable.min.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="~/lib/fancy-file-uploader/fancy_fileupload.css">
+    <link rel="stylesheet" href="~/css/validationEngine.jquery.css" type="text/css">
 
 </head>
 
@@ -79,6 +79,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin='anonymous'></script>
     <script src="~/jtable/jquery.jtable.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="~/js/jquery.validationEngine.js"></script>
+    <script type="text/javascript" src="~/js/jquery.validationEngine-en.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
