--- a/RealEstateAgency/Views/Shared/_Layout.cshtml
+++ b/RealEstateAgency/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using RealEstateAgency.Core.Entities
 @inject UserManager<AgentUser> UserManager
+@inject SignInManager<AgentUser> SignInManager
 
 <!DOCTYPE html>
 <html lang="en">
@@ -26,15 +27,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        @if (User.IsInRole("admin"))
+                        @if (SignInManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="User" asp-action="ManageUsers">Dashboard</a>
+                                <a class="nav-link text-dark" asp-area="Admin" asp-controller="User" asp-action="Index">Dashboard</a>
                             </li>
                         }
-                        @*<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>*@
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
