--- a/RealEstateAgency/Areas/Admin/Views/Estates/Index.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Estates/Index.cshtml
@@ -9,7 +9,7 @@
 </div>
 
 <p>
-    <a class="btn btn-success" role="button" asp-action="Create"><i class="fas fa-plus"></i> Create New</a>
+    <a class="btn btn-success" asp-action="Create"><i class="fas fa-plus"></i> Create New</a>
 </p>
 <table class="table">
     <thead>
