--- a/RealEstateAgency/Areas/Admin/Views/Estates/Delete.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Estates/Delete.cshtml
@@ -137,18 +137,21 @@
             @Html.DisplayFor(model => model.EstateOptions)
         </dd>
     </dl>
-    <div class="card">
-        <div class="mt-2">
-            <div class="image_container" id="existingImages">
-                @for (var i = 0; i < Model.Photos.Count(); i++)
-                {
-                    <div class="image">
-                        <img src="@Model.Photos[i]" />
-                    </div>
-                }
+    @if (Model.Photos.Count() > 0)
+    {
+        <div class="card">
+            <div class="mt-2">
+                <div class="image_container" id="existingImages">
+                    @for (var i = 0; i < Model.Photos.Count(); i++)
+                    {
+                        <div class="image">
+                            <img src="@Model.Photos[i]" />
+                        </div>
+                    }
+                </div>
             </div>
         </div>
-    </div>
+    }
     <form asp-action="Delete" class="row col-md-4 p-2">
         <input type="hidden" asp-for="Id" />
         <button type="submit" class="btn btn-danger col m-1">
