--- a/RealEstateAgency/Areas/Admin/Views/Estates/Edit.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Estates/Edit.cshtml
@@ -18,19 +18,9 @@
                 <span asp-validation-for="EstateName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <textarea rows="4" asp-for="Description" placeholder="Description..." class="form-control"></textarea>
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
                 <input asp-for="Address" id="address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Tags" class="control-label"></label>
-                <input asp-for="Tags" class="form-control" />
-                <span asp-validation-for="Tags" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Rooms" class="control-label"></label>
@@ -42,8 +32,6 @@
                 <input asp-for="BathRooms" class="form-control" />
                 <span asp-validation-for="BathRooms" class="text-danger"></span>
             </div>
-        </div>
-        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Balconies" class="control-label"></label>
                 <input asp-for="Balconies" class="form-control" />
@@ -54,6 +42,8 @@
                 <input asp-for="ParkingSpaces" class="form-control" />
                 <span asp-validation-for="ParkingSpaces" class="text-danger"></span>
             </div>
+        </div>
+        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="TotalArea" class="control-label"></label>
                 <input asp-for="TotalArea" class="form-control" />
@@ -79,13 +69,13 @@
                 <input asp-for="Currency" class="form-control" />
                 <span asp-validation-for="Currency" class="text-danger"></span>
             </div>
-        </div>
-        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="CreatedDate" class="control-label"></label>
                 <input asp-for="CreatedDate" class="form-control" />
                 <span asp-validation-for="CreatedDate" class="text-danger"></span>
             </div>
+        </div>
+        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
                 <select asp-for="CategoryId" class="form-select" asp-items="ViewBag.CategoryId"></select>
@@ -116,20 +106,31 @@
                 <select asp-for="EstateConditionId" class="form-select" asp-items="ViewBag.EstateConditionId"></select>
                 <span asp-validation-for="EstateConditionId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+        </div>
+    </div>
+    <div class="form-group mb-3">
+        <label asp-for="Tags" class="control-label"></label>
+        <input asp-for="Tags" class="form-control" />
+        <span asp-validation-for="Tags" class="text-danger"></span>
+    </div>
+    <div class="form-group mb-3">
+        <textarea rows="4" asp-for="Description" placeholder="Description..." class="form-control"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+    <div class="form-group mb-3">
+        <fieldset class="group">
+            <ul class="checkbox">
                 @for (int i = 0; i < Model.EstateOptionViewModels.Count(); i++)
                 {
-                    <input type="hidden" asp-for="@Model.EstateOptionViewModels[i].Id" />
-                    <input type="hidden" asp-for="@Model.EstateOptionViewModels[i].EstateOptionName" />
-                    <input type="checkbox" asp-for="@Model.EstateOptionViewModels[i].IsSet" />
-                    <label asp-for="@Model.EstateOptionViewModels[i].IsSet">@Model.EstateOptionViewModels[i].EstateOptionName</label>
+                    <li>
+                        <input type="hidden" asp-for="@Model.EstateOptionViewModels[i].Id" />
+                        <input type="hidden" asp-for="@Model.EstateOptionViewModels[i].EstateOptionName" />
+                        <input type="checkbox" asp-for="@Model.EstateOptionViewModels[i].IsSet" />
+                        <label asp-for="@Model.EstateOptionViewModels[i].IsSet">@Model.EstateOptionViewModels[i].EstateOptionName</label>
+                    </li>
                 }
-            </div>
-            <div class="form-group row p-2">
-                <input type="submit" value="Save" class="btn btn-primary col m-1" />
-                <a class="btn btn-primary col m-1" role="button" asp-action="Index">Back to List</a>
-            </div>
-        </div>
+            </ul>
+        </fieldset>
     </div>
     <div class="card">
         <div class="top">
