--- a/RealEstateAgency/wwwroot/css/site.css
+++ b/RealEstateAgency/wwwroot/css/site.css
@@ -98,9 +98,13 @@ body {
 }
 
 .estate-map {
-    height: 350px;
+    height: 0px;
     position: relative;
     overflow: hidden;
+    transition: 0.5s;
+    width: 100%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
 }
 
 .card {
@@ -313,3 +317,13 @@ ul.checkbox li.focus {
     width: 18em;
 } 
 
+.col-right {
+    display: -webkit-box;
+    margin-left: auto;
+}
+
+.row-right {
+    width: 100%;
+    display: flex;
+    padding-top: 2px;
+}
