--- a/RealEstateAgency/Areas/Admin/Views/Estates/Edit.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Estates/Edit.cshtml
@@ -158,10 +158,15 @@
             <div id="image_container" class="image_container"></div>
         </div>
     </div>
+    <div id="estate_map" class="estate-map" style="margin-top: 1em;">
+    </div>
+    <div class="col-md-4 col-right">
+        <div class="form-group row-right">
+            <input type="submit" value="Save" class="btn btn-primary col m-1" />
+            <a class="btn btn-primary col m-1" role="button" asp-action="Index">Back to List</a>
+        </div>
+    </div>
 </form>
-
-<div id="estate_map" class="estate-map">
-</div>
 
 @section Scripts {
     @{
